--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <img src="imagens/lock.png" alt="lock" style="width: 20px;">
                         <input type="password" placeholder="Senha" autocomplete="new-password">
                     </div>
-                    <a href="#">Esqueceu sua senha?</a>
+                    <a href="#" id="novaSenha">Esqueceu sua senha?</a> <br>
                     <button class="botao">Entrar</button>
                 </form>
             </div>
