--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="box segundo-box">
             <div class="coluna-um">
                 <h2 class="titulo ola">Não possui cadastro?</h2>
-                <p>Crie sua conta agora</p>
+                <p>Crie sua conta agora</p> <br>
                 <button id="btnCadastrar" class="botao">Cadastrar</button>
             </div>
 
