ajustes de links

--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
         <div class="box primeiro-box"> 
             <div class="coluna-um">
                 <h2 class="titulo ola">Olá!</h2>
-                <p>Já possui um cadastro?</p>
+                <p>Já possui cadastro?</p>
                 <p>Entre em sua conta</p> <br>
                 <button id="btnEntrar" class="botao">Entrar</button>
             </div>
 
             <div class="coluna-dois">
-                <h2 class="titulo cadastrar">Cadastre-se!</h2> <br>
-                <p class="paragrafo">Entre com sua conta Google</p> <br>
+                <h2 class="titulo cadastrar">Cadastre-se!</h2>
                 <div class="social-midia">
                     <ul>
                         <li>
-                            <a class="google" href="#"><i class="fa-brands fa-google" style="color:#406145;"></i></a>
+                            <a class="google" href="#"><i class="fa-brands fa-google" style="color:#406145;"></i> | Login com conta Google</a>
                         </li>
                     </ul> <br>
                 </div>
@@ -51,8 +50,8 @@
             
         <div class="box segundo-box">
             <div class="coluna-um">
-                <h2 class="titulo ola">Não possui cadastro?</h2>
-                <p>Crie sua conta agora</p> <br>
+                <h2 class="titulo ola">Primeira vez aqui?</h2>
+                <p>Crie uma conta agora!</p> <br>
                 <button id="btnCadastrar" class="botao">Cadastrar</button>
             </div>
 
@@ -61,12 +60,10 @@
                 <div class="social-midia">
                     <ul>
                         <li>
-                            <a class="google" href="#"><i class="fa-brands fa-google" style="color:#406145;"></i></a>
+                            <a class="google" href="#"><i class="fa-brands fa-google" style="color:#406145;"></i> | Login com conta Google</a>
                         </li>
-                    </ul> <br>
+                    </ul> <br> <br>
                 </div>
-                <p class="paragrafo">faça login utilizando e-mail e senha</p>
-                
                 <form action="" class="formulario">
                     <div class="img-input">
                         <img src="imagens/mail.png" alt="email" style="width: 20px;">
