--- a/index.html
+++ b/index.html
@@ -22,25 +22,29 @@
                 <div class="social-midia">
                     <ul>
                         <li>
-                            <a class="google" href="#"><i class="fa-brands fa-google" style="color:#406145;"></i> | Login com conta Google</a>
+                            <a class="google" href="#"><i class="fa-brands fa-google" style="color:#406145;"></i> | Cadastro com conta Google</a>
                         </li>
                     </ul> <br>
                 </div>
-                <p class="paragrafo">ou cadastre seu email</p>
+                <p class="paragrafo">Registre email e senha</p>
                 
                 <form action="" class="formulario">
                     <div class="img-input">
                         <img src="imagens/person.png" alt="person" style="width: 20px;">
-                        <input type="text" placeholder="Nome">
+                        <input type="text" placeholder="Nome" id="nome" required>
+                        <!--<span class="erro"></span>-->
                     </div>
                     <div class="img-input">
-                        <img src="imagens/mail.png" alt="email" style="width: 20px;">
-                        <input type="email" placeholder="Email">
+                        <img src="imagens/mail.png" alt="email" style="width: 20px;" required>
+                        <input type="email" placeholder="Email" id="email" required>
+                        <!--<span class="erro">Email inválido</span>-->
+
                     </div>
 
                     <div class="img-input">
                         <img src="imagens/lock.png" alt="lock" style="width: 20px;">
-                        <input type="password" placeholder="Senha" autocomplete="new-password">
+                        <input type="password" placeholder="Senha" autocomplete="new-password" id="senha" required>
+                        <!--<span class="erro" >Senha inválida</span>-->
                     </div>
 
                     <button class="botao">Cadastrar</button>
@@ -67,15 +71,15 @@
                 <form action="" class="formulario">
                     <div class="img-input">
                         <img src="imagens/mail.png" alt="email" style="width: 20px;">
-                        <input type="email" placeholder="Email">
+                        <input type="email" placeholder="Email" id="email" required>
                     </div>
 
                     <div class="img-input">
                         <img src="imagens/lock.png" alt="lock" style="width: 20px;">
-                        <input type="password" placeholder="Senha" autocomplete="new-password">
+                        <input type="password" placeholder="Senha" autocomplete="current-password" id="senha" required>
                     </div>
                     <a href="#" id="novaSenha">Esqueceu sua senha?</a> <br>
-                    <button class="botao">Entrar</button>
+                    <button class="botao" onclick="logar()">Entrar</button>
                 </form>
             </div>
         </div>
