--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo/estiloPrincipal.css">
     <title>Página Inicial</title>
 </head>
 <body>
-    
+    <header>
+        <div class="divLogo">
+            <img src="imagens/logo.png" alt="logotipo">
+            <h1>MeuGestor</h1>
+        </div>
+    </header>
 </body>
 </html>
