--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -8,11 +8,25 @@
     <title>Página Inicial</title>
 </head>
 <body>
-    <header>
+    <div class="imgFundo"></div>
+    <header> <!--CABEÇALHO-->
         <div class="divLogo">
             <img src="imagens/logo.png" alt="logotipo">
             <h1>MeuGestor</h1>
         </div>
     </header>
+    <section class="contPrincipal"> <!--CONTEÚDO PRINCIPAL/ONDE FICARÃO OS CARDS-->
+
+    </section>
+
+    <aside class="menu"> <!--MENU?-->
+
+    </aside>
+    <footer>
+        <p>
+            &copy; 2024 | Amina do Couto | Todos os direitos reservados.
+        </p>
+    </footer>
+    <script src=""></script>
 </body>
 </html>
