ajuste no estilo da pag login

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Login</title>
 </head>
 <body class="cadastrar-js">
+    <div class="fundo"></div>
     <div class="container"><!--Container principal-->
         <div class="box primeiro-box"> 
             <div class="coluna-um">
@@ -23,7 +24,7 @@
                 <div class="social-midia">
                     <ul>
                         <li>
-                            <a class="google" href="#"><i class="fa-brands fa-google" style="color:#406145;"></i> | Cadastro com conta Google</a>
+                            <a class="google" href="#"><i class="fa-brands fa-google"></i> | Cadastro com conta Google</a>
                         </li>
                     </ul> <br>
                 </div>
