--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -15,13 +15,13 @@
             <h1>MeuGestor</h1>
         </div>
     </header>
-    <section class="contPrincipal"> <!--CONTEÚDO PRINCIPAL/ONDE FICARÃO OS CARDS-->
-
-    </section>
-
-    <aside class="menu"> <!--MENU?-->
-
-    </aside>
+    <main>
+        <section class="contPrincipal"> <!--CONTEÚDO PRINCIPAL/ONDE FICARÃO OS CARDS-->
+            
+        </section>
+        <aside class="menu"> <!--MENU?-->
+        </aside>
+    </main>
     <footer>
         <p>
             &copy; 2024 | Amina do Couto | Todos os direitos reservados.
