ajustes do estilo

--- a/index.html
+++ b/index.html
@@ -32,19 +32,20 @@
                 
                 <form action="" class="formulario">
                     <div class="img-input">
-                        <img src="imagens/person.png" alt="person" style="width: 20px;">
+                        <img src="imagens/person.png" alt="person">
                         <input type="text" placeholder="Nome" id="nome" required>
-                        <!--<span class="erro"></span>-->
                     </div>
+                    <!--<span class="erro"></span>-->
+                    
                     <div class="img-input">
-                        <img src="imagens/mail.png" alt="email" style="width: 20px;" required>
+                        <img src="imagens/mail.png" alt="email" required>
                         <input type="email" placeholder="Email" id="email" required>
                         <!--<span class="erro">Email inválido</span>-->
 
                     </div>
 
                     <div class="img-input">
-                        <img src="imagens/lock.png" alt="lock" style="width: 20px;">
+                        <img src="imagens/lock.png" alt="lock">
                         <input type="password" placeholder="Senha" autocomplete="new-password" id="senha" required>
                         <!--<span class="erro" >Senha inválida</span>-->
                     </div>
@@ -66,18 +67,18 @@
                 <div class="social-midia">
                     <ul>
                         <li>
-                            <a class="google" href="#"><i class="fa-brands fa-google" style="color:#406145;"></i> | Login com conta Google</a>
+                            <a class="google" href="#"><i class="fa-brands fa-google"></i> | Login com conta Google</a>
                         </li>
                     </ul> <br> <br>
                 </div>
                 <form action="" class="formulario">
                     <div class="img-input">
-                        <img src="imagens/mail.png" alt="email" style="width: 20px;">
+                        <img src="imagens/mail.png" alt="email">
                         <input type="email" placeholder="Email" id="email" required>
                     </div>
 
                     <div class="img-input">
-                        <img src="imagens/lock.png" alt="lock" style="width: 20px;">
+                        <img src="imagens/lock.png" alt="lock">
                         <input type="password" placeholder="Senha" autocomplete="current-password" id="senha" required>
                     </div>
                     <a href="#" id="novaSenha">Esqueceu sua senha?</a> <br>
