--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
 
     <script src="js/script.js"></script>
     <script src="https://kit.fontawesome.com/aaea750203.js" crossorigin="anonymous"></script>
-    <script src="js/firebase.js"></script>
+    <script type="module" src="js/firebase.js"></script>
 </body>
 </html>
