--- a/index.html
+++ b/index.html
@@ -42,15 +42,18 @@
 
                     <div class="img-input">
                         <img src="imagens/mail.png" alt="email" required>
-                        <input type="email" placeholder="Email" id="email" required>
+                        <input type="email" placeholder="Email" id="emailCadastrar" oninput="validacaoCadastro()"
+                            required>
                     </div>
 
                     <div class="img-input">
                         <img src="imagens/lock.png" alt="lock">
-                        <input type="password" placeholder="Senha" autocomplete="new-password" id="senha" required>
+                        <input type="password" placeholder="Senha" autocomplete="new-password" id="senhaCadastrar"
+                            oninput="validacaoCadastro()" required>
                     </div>
 
-                    <button class="botao" id="botaoCadastrar" onclick="cadastrar()">Cadastrar</button>
+                    <button class="botao" id="botaoCadastrar" onclick="cadastrarUsuario()"
+                        disabled="true">Cadastrar</button>
                 </form>
             </div>
         </div>
@@ -75,28 +78,26 @@
                     <div class="img-input">
                         <img src="imagens/mail.png" alt="email">
                         <input type="email" placeholder="Email" autocomplete="email" id="emailLogin"
-                            onchange="validacao()" required>
+                            oninput="validacao()" required>
                     </div>
 
                     <div class="img-input">
                         <img src="imagens/lock.png" alt="lock">
                         <input type="password" placeholder="Senha" autocomplete="current-password" id="senhaLogin"
-                            onchange="validacao()" required>
+                            oninput="validacao()" required>
                     </div>
 
                     <span id="erro"> -Email ou senha incorretos</span>
 
                     <button id="novaSenha" disabled="true">Esqueceu sua senha?</button> <br>
 
-                    <button class="botao" id="botaoEntrar" disabled="true" onclick="logar(event)">Entrar</button>
+                    <button class="botao" id="botaoEntrar" disabled="true" onclick="login()">Entrar</button>
                 </form>
             </div>
         </div>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js"></script>
-    <script type="module" src="js/firebase.js"></script>
-    <script type="module" src="js/script.js"></script>
+    <script src="js/script.js"></script>
     <script src="https://kit.fontawesome.com/aaea750203.js" crossorigin="anonymous"></script> <!--icone google-->
 </body>
 
