--- a/index.html
+++ b/index.html
@@ -42,18 +42,16 @@
 
                     <div class="img-input">
                         <img src="imagens/mail.png" alt="email" required>
-                        <input type="email" placeholder="Email" id="emailCadastrar" oninput="validacaoCadastro()"
-                            required>
+                        <input type="email" placeholder="Email" id="emailCadastrar" required>
                     </div>
 
                     <div class="img-input">
                         <img src="imagens/lock.png" alt="lock">
                         <input type="password" placeholder="Senha" autocomplete="new-password" id="senhaCadastrar"
-                            oninput="validacaoCadastro()" required>
+                            required>
                     </div>
 
-                    <button class="botao" id="botaoCadastrar" onclick="cadastrarUsuario()"
-                        disabled="true">Cadastrar</button>
+                    <button class="botao" id="botaoCadastrar" onclick="cadastrarUsuario()">Cadastrar</button>
                 </form>
             </div>
         </div>
@@ -77,21 +75,20 @@
                 <form action="" class="formulario">
                     <div class="img-input">
                         <img src="imagens/mail.png" alt="email">
-                        <input type="email" placeholder="Email" autocomplete="email" id="emailLogin"
-                            oninput="validacao()" required>
+                        <input type="email" placeholder="Email" autocomplete="email" id="emailLogin" required>
                     </div>
 
                     <div class="img-input">
                         <img src="imagens/lock.png" alt="lock">
                         <input type="password" placeholder="Senha" autocomplete="current-password" id="senhaLogin"
-                            oninput="validacao()" required>
+                            required>
                     </div>
 
                     <span id="erro"> -Email ou senha incorretos</span>
 
                     <button id="novaSenha" disabled="true">Esqueceu sua senha?</button> <br>
 
-                    <button class="botao" id="botaoEntrar" disabled="true" onclick="login()">Entrar</button>
+                    <button class="botao" id="botaoEntrar" onclick="login()">Entrar</button>
                 </form>
             </div>
         </div>
