--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
         });
     </script>
 
-    <script src="js/script.js"></script>
+    <script src="js/animacaoLogin.js"></script>
+    <script src="js/loading.js"></script>
     <script src="https://kit.fontawesome.com/aaea750203.js" crossorigin="anonymous"></script> <!--icone google-->
 </body>
 
