--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                     <span id="erro"> -Email ou senha incorretos</span>
 
-                    <button id="novaSenha" disabled="true">Esqueceu sua senha?</button> <br>
+                    <button id="novaSenha">Esqueceu sua senha?</button> <br>
 
                     <button class="botao" id="botaoEntrar" onclick="login()">Entrar</button>
                 </form>
