--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 <div class="social-midia">
                     <ul>
                         <li>
-                            <button class="google" href="#" id="loginGoogle"><i class="fa-brands fa-google"></i> | Cadastro com conta
+                            <button class="google" id="loginGoogle" onclick="entrarGoogle()"><i
+                                    class="fa-brands fa-google"></i> | Cadastro com conta
                                 Google</button>
                         </li>
                     </ul> <br>
@@ -69,7 +70,8 @@
                 <div class="social-midia">
                     <ul>
                         <li>
-                            <button class="google" href="#" id="loginGoogle"><i class="fa-brands fa-google"></i> | Login com conta Google</button>
+                            <button class="google" id="loginGoogle" onclick="entrarGoogle()"><i class="fa-brands fa-google"></i> | Login
+                                com conta Google</button>
                         </li>
                     </ul> <br> <br>
                 </div>
@@ -118,7 +120,7 @@
     <script type="module" src="js/firebase.js"></script>
 
     <script type="module">
-        import { cadastrarUsuario, login, redefinirSenha } from "./js/firebase.js";
+        import { cadastrarUsuario, login, redefinirSenha, entrarGoogle } from "./js/firebase.js";
         // Event listener para o formulário de cadastro
         document.getElementById("botaoCadastrar").addEventListener("click", (event) => {
             event.preventDefault();
@@ -133,6 +135,11 @@
         document.getElementById("novaSenha").addEventListener("click", (event) => {
             event.preventDefault();
             redefinirSenha();
+        });
+        // Adiciona o evento de clique ao link de login com Google
+        document.getElementById("entrarGoogle").addEventListener("click", (event) => {
+            event.preventDefault();
+            entrarGoogle();
         });
     </script>
 
