--- a/emBreve.html
+++ b/emBreve.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo/estiloBreve.css">
-    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <title>Página Inicial</title>
+    <title>Pagina Inicial</title>
 </head>
-
 <body>
     <div class="imgFundo"></div>
     <main>
@@ -21,5 +17,4 @@
         </section>
     </main>
 </body>
-
 </html>
