teste para tentar resolver erro

--- a/emBreve.html
+++ b/emBreve.html
@@ -17,5 +17,6 @@
             <p>Novidades em breve!</p>
         </section>
     </main>
-</body>
+
+    <script type="module" src="js/firebase.js"></script></body>
 </html>
