--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                 <div class="social-midia">
                     <ul>
                         <li>
-                            <button class="google" id="loginGoogle" onclick="entrarGoogle()"><i class="fa-brands fa-google"></i> | Login
+                            <button class="google" id="loginGoogle" onclick="entrarGoogle()"><i
+                                    class="fa-brands fa-google"></i> | Login
                                 com conta Google</button>
                         </li>
                     </ul> <br> <br>
