--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -34,7 +34,7 @@
         <section class="contPrincipal"> <!--CONTEÚDO PRINCIPAL/ONDE FICARÃO OS CARDS-->
 
         </section>
-        <aside class="menu"> <!--MENU?-->
+        <aside class="navegador"> <!--MENU?-->
         </aside>
     </main>
     <footer>
@@ -42,7 +42,7 @@
             &copy; 2024 | Amina do Couto | Todos os direitos reservados.
         </p>
     </footer>
-    <script src="estilo/estiloPrincipal.css"></script>
+    <script src="js/indexPgPrincipal.js"></script>
 </body>
 
 </html>
