--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             </div>
         </div>
     </div>
-    <!--IMPORTAÇÃO DO FIREBASE-->
+    
+    //IMPORTAÇÃO DO FIREBASE
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
         import { getAuth } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
@@ -136,9 +137,9 @@
             redefinirSenha();
         });
     </script>
-
+    
     <script src="js/animacaoLogin.js"></script>
-    <script src="js/loading.js"></script>
+    <script src="js/firebase.js"></script>
     <script src="https://kit.fontawesome.com/aaea750203.js" crossorigin="anonymous"></script> <!--icone google-->
 </body>
 
