--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         import { getAuth } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyB3JQBCKeBIN34LDQwIggL6WQgRkhYcPFs",
+            apiKey: ,
             authDomain: "controle-de-gastos-123e0.firebaseapp.com",
             projectId: "controle-de-gastos-123e0",
             storageBucket: "controle-de-gastos-123e0.appspot.com",
