implementando formulario e lista

--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -31,6 +31,9 @@
         </section>
     </header>
     <main>
+    </section>
+    <aside class="navegador"> <!--MENU?-->
+    </aside>
         <section class="contPrincipal"> 
             <section class="formulario">
                 <h2>Adicionar Gastos</h2>
@@ -41,12 +44,12 @@
                     <option id="opcoesGastos" value="Fixo">Fixo</option>
                     <option id="opcoesGastos" value="Variavel">Variável</option>
                 </select>
+                <input type="date" id="dataGasto">
                 <button id="btnAdd" onclick="addGasto()">Adicionar à lista</button>
             </section>
-
+            <section class="listaGastos"></section>
         </section>
-        <aside class="navegador"> <!--MENU?-->
-        </aside>
+
     </main>
     <footer>
         <p>
