ajustes para adição dos próximos conteúdos

--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -58,6 +58,8 @@
             <section class="listaGastos"></section>
         </section>
 
+        <section class="graficos"></section>
+
     </main>
     <footer>
         <p>
