ajuste no estilo do menu

--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -26,7 +26,7 @@
         <section class="menu" id="menu">
             <ul>
                 <li id="itemMenu">Perfil</li>
-                <li id="itemMenu">Sair</li>
+                <li id="itemMenu"><a href="index.html">Sair</a></li>
             </ul>
         </section>
     </header>
