ajuste no main e adição de categorias

--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -44,6 +44,17 @@
                     <option id="opcoesGastos" value="Fixo">Fixo</option>
                     <option id="opcoesGastos" value="Variavel">Variável</option>
                 </select>
+                <select name="" id="categoria">
+                    <option id="opcoesCategoria" value="">Categoria</option>
+                    <option id="opcoesCategoria" value="">Alimentação</option>
+                    <option id="opcoesCategoria" value="">Moradia</option>
+                    <option id="opcoesCategoria" value="">Transporte</option>
+                    <option id="opcoesCategoria" value="">Educação</option>
+                    <option id="opcoesCategoria" value="">Saúde</option>
+                    <option id="opcoesCategoria" value="">Lazer</option>
+                    <option id="opcoesCategoria" value="">Compras</option>
+                    <option id="opcoesCategoria" value="">Outros</option>
+                </select>
                 <input type="date" id="dataGasto">
                 <button id="btnAdd" onclick="addGasto()">Adicionar à lista</button>
             </section>
