--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -69,7 +69,9 @@
             <section class="listaGastos"></section>
         </section>
 
-        <section class="graficos"></section>
+        <section class="graficos">
+            
+        </section>
 
     </main>
     <footer>
@@ -78,6 +80,7 @@
         </p>
     </footer>
     <script src="js/indexPgPrincipal.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!--Gráficos-->
 </body>
 
 </html>
