--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -70,7 +70,8 @@
         </section>
 
         <section class="graficos">
-            <canvas class="meuGrafico"></canvas>
+            <canvas id="meuGrafico"></canvas>
+            <p>gráfico</p>
         </section>
 
     </main>
@@ -81,7 +82,6 @@
     </footer>
     <script src="js/indexPgPrincipal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!--Gráficos-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js" integrity="sha512-L0Shl7nXXzIlBSUUPpxrokqq4ojqgZFQczTYlGjzONGTDAcLremjwaWv5A+EDLnxhQzY5xUZPWLOLqYRkY0Cbw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 </html>
